--- a/function/首页.md
+++ b/function/首页.md
@@ -14,11 +14,10 @@
 点击【争夺狗牌】按钮可快速跳转到争夺战场页面。  
 
 ## 翻狗牌
-**代替原好运奖励、搜刮资源。**  
-
-每天在争夺战场至少出击5次可进行翻牌。  
+每天在争夺战场出击胜利，获得至少1枚狗牌后可进行翻牌。  
 12张牌里有蓝、绿、黄、红各三张。每次翻一张牌。  
-当任意颜色的三张牌被翻出时，则获得该三张牌对应品质的奖励。  
+当任意颜色的三张牌全部被翻出时，获得该颜色对应品质的奖励。  
+有SVIP时，下方提示`[SVIP透视]`，可以在没有翻开第一张牌的情况下得知第一张牌的内容。  
 
 蓝色（幸运）：1.0倍贝壳+1.0倍经验+随机装备箱子+灵魂药水   
 绿色（稀有）：1.1倍贝壳+1.1倍经验+随机装备箱子+灵魂药水+材料锻造箱   
@@ -40,7 +39,7 @@
 
 ## 恢复体力
 点击【获取额外奖励】按钮后，在弹窗中继续选择：   
-消耗（体能刺激药水 x1）获取额外一次翻牌经验和贝壳奖励（不含物品奖励）。  
+消耗（体能刺激药水 x1），直接额外获得一次**蓝色（幸运）**对应的经验和贝壳奖励（不含物品奖励）。  
 消耗（体能刺激药水 x2）重置狗牌，重新打狗牌重新翻牌获得完整的翻牌奖励。  
 
 ## 锻造装备
