--- a/function/我的沙滩.md
+++ b/function/我的沙滩.md
@@ -8,7 +8,11 @@
 【[**战绩统计**](战绩统计.md)】 【[**挂机7天**](挂机7天.md)】 【[**更新日志**](更新日志.md)】   
 
 # 我的沙滩
-收集装备、批量清理回收锻造石的地方
+沙滩上会出现刷新或者锻造产生的装备。  
+在沙滩页面上可以把装备从沙滩收入仓库，或者从仓库丢弃到沙滩。  
+不需要的装备可以点击装备选择【熔炼该装备为护身符】（需绿色以上品质），或者点击【清理沙滩（所有沙滩装备回收为锻造石）】按钮将沙滩上所有的装备清理。  
+
+
 ## 沙滩
 沙滩上每个出现的物品都只会保留24小时，沙滩刷新后每1320分钟可再次刷新一次。   
 刷新的装备、装备锻造的装备都会在这里显示。   
