--- a/function/首页.md
+++ b/function/首页.md
@@ -79,12 +79,12 @@
 
 ### 锻造机制
 装备的等级和属性百分比在一定范围内随机。  
-锻造可能出现普通高级装备（绿/橙装），也可能出现红装。  
+锻造可能出现普通高级装备（绿/黄色），也可能出现红装。  
 锻造红装有保底，若连续11次锻造都不是红装，则第12次锻造必定为红装。  
 
-锻造装备时，会先随机决定该装备的属性百分比总和，再依次随机分配到各属性上，因此容易出现部分属性为150%的情况。（装备选择具体参见【[装备选择（未建成）]()】）  
+锻造装备时，会先随机决定该装备的属性百分比总和，再依次随机分配到各属性上，因此容易出现部分属性为150%的情况。（装备选择具体见[装备选择](../article/index.md#选装相关)）  
 
-在SSS段位，锻造的装备等级为随机270-300级。普通高级装备必定为橙装，且属性和大概率（约83%）为516%。  
+在SSS段位，锻造的装备等级为随机270-300级。普通高级装备必定为黄色，且属性和大概率（约83%）为516%。  
 **注：其他段位的锻造机制尚不清楚，待补充**  
 
 ## 提升卡片
